tests/fails/for_loop_incompatible_type.mat
scalar a
vector B[12]

for (a,B in 1:2:1, 1:3:2) {
  print(a)
}